--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,9 +32,19 @@
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>irelandServlet</servlet-name>
-		<url-pattern>*.html</url-pattern>
-	</servlet-mapping>
+	  <servlet-name>irelandServlet</servlet-name>
+	  <url-pattern>/</url-pattern>
+ 	</servlet-mapping>
+	
+<!-- 	<servlet-mapping> -->
+<!-- 		<servlet-name>irelandServlet</servlet-name> -->
+<!-- 		<url-pattern>*.html</url-pattern> -->
+<!-- 	</servlet-mapping> -->
+	
+<!-- 	<servlet-mapping> -->
+<!--   <servlet-name>irelandServlet</servlet-name> -->
+<!--   <url-pattern>*.json</url-pattern> -->
+<!--  </servlet-mapping> -->
 	
 	<servlet-mapping>
 		<servlet-name>irelandServlet</servlet-name>
@@ -46,10 +56,6 @@
 		<url-pattern>/images/**</url-pattern>
 	</servlet-mapping>
 	
-	<servlet-mapping>
-		<servlet-name>irelandServlet</servlet-name>
-		<url-pattern>*.json</url-pattern>
-	</servlet-mapping>
-	
+
 	<display-name>Archetype Created Web Application</display-name>
 </web-app>
