--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,23 @@
 			<artifactId>spring-oxm</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
+		
+		<!-- SPRING Security  -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>		
 
 		<!-- Logging with SLF4J & LogBack -->
 		<dependency>
