--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,53 +2,51 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-	
-	
-	
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-	
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
-	
-	<filter>
-		<filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
-		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
-	</filter>
-	
-	<filter-mapping>
-		<filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
+
+
+	<!--<filter>-->
+		<!--<filter-name>SpringOpenEntityManagerInViewFilter</filter-name>-->
+		<!--<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>-->
+	<!--</filter>-->
+	<!-- -->
+	<!--<filter-mapping>-->
+		<!--<filter-name>SpringOpenEntityManagerInViewFilter</filter-name>-->
+		<!--<url-pattern>/*</url-pattern>-->
+	<!--</filter-mapping>-->
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/config/root-context.xml
+        </param-value>
+    </context-param>
+
+    <!-- SPRING SECURITY -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/jpaContext.xml</param-value>
-	</context-param>
+	<!--<context-param>-->
+		<!--<param-name>contextConfigLocation</param-name>-->
+		<!--<param-value>classpath:/jpaContext.xml</param-value>-->
+	<!--</context-param>-->
 	
 	<servlet>
 		<servlet-name>irelandServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/config/servlet-config.xml</param-value>
+			<param-value>
+                /WEB-INF/config/servlet-context.xml
+            </param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
-	<servlet-mapping>
-	  <servlet-name>irelandServlet</servlet-name>
-	  <url-pattern>/</url-pattern>
- 	</servlet-mapping>
 	
 	
 	<servlet-mapping>
@@ -60,15 +58,21 @@
 		<servlet-name>irelandServlet</servlet-name>
 		<url-pattern>/images/**</url-pattern>
 	</servlet-mapping>
-	
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/security-config.xml</param-value>
-	</context-param>
+
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <listener>
+        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+    </listener>
+
+    <servlet-mapping>
+        <servlet-name>irelandServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 		
 
 	<display-name>Archetype Created Web Application</display-name>
