--- a/management/pom.xml
+++ b/management/pom.xml
@@ -1,36 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
-  <groupId>com.ireland.travel</groupId>
-  <artifactId>ireland</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0.0-BUILD-SNAPSHOT</version>
-  <name>travel</name>
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.ireland.travel</groupId>
+    <artifactId>ireland</artifactId>
+    <version>1.0.0-BUILD-SNAPSHOT</version>
+  </parent>
+  <artifactId>management</artifactId>
+  <packaging>war</packaging>
+  <name>management Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  
-<properties>
+<!--   <dependencies> -->
+<!--     <dependency> -->
+<!--       <groupId>junit</groupId> -->
+<!--       <artifactId>junit</artifactId> -->
+<!--       <version>3.8.1</version> -->
+<!--       <scope>test</scope> -->
+<!--     </dependency> -->
+<!--   </dependencies> -->
 
-		<!-- Generic properties -->
-		<java.version>1.7</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- Spring -->
-		<spring-framework.version>4.1.6.RELEASE</spring-framework.version>
-
-		<!-- Hibernate / JPA -->
-		<hibernate.version>4.3.8.Final</hibernate.version>
-
-		<!-- Logging -->
-		<logback.version>1.0.13</logback.version>
-		<slf4j.version>1.7.5</slf4j.version>
-
-		<!-- Test -->
-		<junit.version>4.12</junit.version>
-
-	</properties>
-
-	<dependencies>
+<dependencies>
 		<!-- Spring and Transactions -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -290,7 +280,9 @@
         </dependency>
 
 	</dependencies>
-	<modules>
-		<module>management</module>
-	</modules>
+
+
+  <build>
+    <finalName>management</finalName>
+  </build>
 </project>
