--- a/management/pom.xml
+++ b/management/pom.xml
@@ -274,7 +274,7 @@
         <dependency>
             <groupId>com.ireland.entity</groupId>
             <artifactId>entity</artifactId>
-            <version>1.0</version>
+            <version>${com.ireland.entity.version}</version>
         </dependency>
 
         <dependency>
@@ -284,274 +284,6 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    
-<!--<dependencies>-->
-		<!--&lt;!&ndash; Spring and Transactions &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-context</artifactId>-->
-			<!--<version>${spring-framework.version}</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-tx</artifactId>-->
-			<!--<version>${spring-framework.version}</version>-->
-		<!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-aspects</artifactId>-->
-            <!--<version>${spring-framework.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-context-support</artifactId>-->
-            <!--<version>${spring-framework.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-webmvc</artifactId>-->
-            <!--<version>${spring-framework.version}</version>-->
-        <!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-oxm</artifactId>-->
-			<!--<version>${spring-framework.version}</version>-->
-		<!--</dependency>-->
-		<!-- -->
-		<!--&lt;!&ndash; SPRING Security  &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.security</groupId>-->
-			<!--<artifactId>spring-security-web</artifactId>-->
-			<!--<version>4.0.2.RELEASE</version>-->
-		<!--</dependency>-->
-		<!-- -->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.security</groupId>-->
-			<!--<artifactId>spring-security-taglibs</artifactId>-->
-			<!--<version>3.2.5.RELEASE</version>-->
-		<!--</dependency>-->
-
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.security</groupId>-->
-			<!--<artifactId>spring-security-config</artifactId>-->
-			<!--<version>4.0.2.RELEASE</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>commons-logging</groupId>-->
-			<!--<artifactId>commons-logging</artifactId>-->
-			<!--<version>1.2</version>-->
-		<!--</dependency>		-->
-
-		<!--&lt;!&ndash; Logging with SLF4J & LogBack &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>slf4j-api</artifactId>-->
-			<!--<version>${slf4j.version}</version>-->
-			<!--<scope>compile</scope>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>ch.qos.logback</groupId>-->
-			<!--<artifactId>logback-classic</artifactId>-->
-			<!--<version>${logback.version}</version>-->
-			<!--<scope>runtime</scope>-->
-		<!--</dependency>-->
-
-		<!--&lt;!&ndash; Hibernate &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate</groupId>-->
-			<!--<artifactId>hibernate-core</artifactId>-->
-			<!--<version>${hibernate.version}</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate</groupId>-->
-			<!--<artifactId>hibernate-entitymanager</artifactId>-->
-			<!--<version>${hibernate.version}</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate.javax.persistence</groupId>-->
-			<!--<artifactId>hibernate-jpa-2.1-api</artifactId>-->
-			<!--<version>1.0.0.Final</version>-->
-		<!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.javassist</groupId>-->
-            <!--<artifactId>javassist</artifactId>-->
-            <!--<version>3.18.2-GA</version>-->
-        <!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>commons-collections</groupId>-->
-			<!--<artifactId>commons-collections</artifactId>-->
-			<!--<version>3.2.1</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate</groupId>-->
-			<!--<artifactId>hibernate-validator</artifactId>-->
-			<!--<version>4.3.1.Final</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>javax.validation</groupId>-->
-			<!--<artifactId>validation-api</artifactId>-->
-			<!--<version>1.0.0.GA</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>javax.transaction</groupId>-->
-			<!--<artifactId>jta</artifactId>-->
-			<!--<version>1.1</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-jdbc</artifactId>-->
-			<!--<version>${spring-framework.version}</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-orm</artifactId>-->
-			<!--<version>${spring-framework.version}</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>commons-pool</groupId>-->
-			<!--<artifactId>commons-pool</artifactId>-->
-			<!--<version>1.5.6</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>commons-dbcp</groupId>-->
-			<!--<artifactId>commons-dbcp</artifactId>-->
-			<!--<version>1.4</version>-->
-			<!--<exclusions>-->
-				<!--<exclusion>-->
-					<!--<groupId>commons-logging</groupId>-->
-					<!--<artifactId>commons-logging</artifactId>-->
-				<!--</exclusion>-->
-				<!--<exclusion>-->
-					<!--<groupId>xml-apis</groupId>-->
-					<!--<artifactId>xml-apis</artifactId>-->
-				<!--</exclusion>-->
-			<!--</exclusions>-->
-		<!--</dependency>-->
-		<!-- -->
-	<!--&lt;!&ndash; MySQL &ndash;&gt;-->
-	<!--<dependency>-->
-		<!--<groupId>mysql</groupId>-->
-		<!--<artifactId>mysql-connector-java</artifactId>-->
-		<!--<version>5.1.21</version>-->
-	<!--</dependency>-->
-	<!-- -->
-         <!-- -->
-    <!--&lt;!&ndash; Test Artifacts &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-test</artifactId>-->
-			<!--<version>${spring-framework.version}</version>-->
-			<!--<scope>test</scope>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>junit</groupId>-->
-			<!--<artifactId>junit</artifactId>-->
-			<!--<version>${junit.version}</version>-->
-			<!--<scope>test</scope>-->
-		<!--</dependency>-->
-
-		<!--&lt;!&ndash; Commons &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.apache.commons</groupId>-->
-			<!--<artifactId>commons-lang3</artifactId>-->
-			<!--<version>3.1</version>-->
-		<!--</dependency>-->
-
-		<!--&lt;!&ndash; Jackson &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.codehaus.jackson</groupId>-->
-			<!--<artifactId>jackson-mapper-asl</artifactId>-->
-			<!--<version>1.9.13</version>-->
-		<!--</dependency>-->
-
-        <!--&lt;!&ndash;SPRING DATA&ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.data</groupId>-->
-            <!--<artifactId>spring-data-jpa</artifactId>-->
-            <!--<version>1.8.0.RELEASE</version>-->
-        <!--</dependency>-->
-        <!-- -->
-        <!--&lt;!&ndash; Spring HATEOAS &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.hateoas</groupId>-->
-			<!--<artifactId>spring-hateoas</artifactId>-->
-			<!--<version>0.16.0.RELEASE</version>-->
-		<!--</dependency>-->
-		<!-- -->
-        <!--&lt;!&ndash; Logging &ndash;&gt;-->
-<!--&lt;!&ndash;         <dependency> &ndash;&gt;-->
-<!--&lt;!&ndash;             <groupId>org.slf4j</groupId> &ndash;&gt;-->
-<!--&lt;!&ndash;             <artifactId>slf4j-api</artifactId> &ndash;&gt;-->
-<!--&lt;!&ndash;             <version>${slf4j.version}</version> &ndash;&gt;-->
-<!--&lt;!&ndash;         </dependency> &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>jcl-over-slf4j</artifactId>-->
-            <!--<version>${slf4j.version}</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-
-
-        <!--&lt;!&ndash; @Inject &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>javax.inject</groupId>-->
-			<!--<artifactId>javax.inject</artifactId>-->
-			<!--<version>1</version>-->
-		<!--</dependency>-->
-
-		<!--&lt;!&ndash; Servlet &ndash;&gt;-->
-<!--&lt;!&ndash; 		<dependency> &ndash;&gt;-->
-<!--&lt;!&ndash; 			<groupId>javax.servlet</groupId> &ndash;&gt;-->
-<!--&lt;!&ndash; 			<artifactId>servlet-api</artifactId> &ndash;&gt;-->
-<!--&lt;!&ndash; 			<version>2.5</version> &ndash;&gt;-->
-<!--&lt;!&ndash; 			<scope>provided</scope> &ndash;&gt;-->
-<!--&lt;!&ndash; 		</dependency> &ndash;&gt;-->
-
-			<!--<dependency>-->
-		        <!--<groupId>javax.servlet</groupId>-->
-		        <!--<artifactId>javax.servlet-api</artifactId>-->
-		        <!--<version>3.1.0</version>-->
-			<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>javax.servlet.jsp</groupId>-->
-			<!--<artifactId>jsp-api</artifactId>-->
-			<!--<version>2.2</version>-->
-			<!--<scope>provided</scope>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>javax.servlet</groupId>-->
-			<!--<artifactId>jstl</artifactId>-->
-			<!--<version>1.2</version>-->
-		<!--</dependency>-->
-
-		<!--&lt;!&ndash;  Freemarker &ndash;&gt;-->
-		<!--<dependency>-->
-			<!--<groupId>org.freemarker</groupId>-->
-			<!--<artifactId>freemarker</artifactId>-->
-			<!--<version>2.3.20</version>-->
-		<!--</dependency>-->
-		<!-- -->
-		<!--&lt;!&ndash; Apache Tiles &ndash;&gt;-->
-		<!--<dependency>-->
-		    <!--<groupId>org.apache.tiles</groupId>-->
-		    <!--<artifactId>tiles-extras</artifactId>-->
-		    <!--<version>3.0.0</version>-->
-		<!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>com.google.guava</groupId>-->
-            <!--<artifactId>guava</artifactId>-->
-            <!--<version>15.0</version>-->
-        <!--</dependency>-->
-        <!-- -->
-        <!--<dependency>-->
-        	<!--<groupId>com.ireland.entity</groupId>-->
-			<!--<artifactId>entity</artifactId>-->
-			<!--<version>1.0</version>-->
-        <!--</dependency>-->
-
-	<!--</dependencies>-->
-
 
   <build>
     <finalName>management</finalName>
