--- a/management/pom.xml
+++ b/management/pom.xml
@@ -69,6 +69,19 @@
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
+        
+        <!-- Spring Batch dependencies -->
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-core</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-infrastructure</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+        
 
         <!-- Logging with SLF4J & LogBack -->
         <dependency>
