--- a/management/pom.xml
+++ b/management/pom.xml
@@ -81,6 +81,32 @@
 			<artifactId>spring-batch-infrastructure</artifactId>
 			<version>3.0.5.RELEASE</version>
 		</dependency>
+		
+		 <!-- Spring Boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>1.2.5.RELEASE</version>
+        </dependency>
+		
+		  <!-- Reactor -->
+        <dependency>
+            <groupId>org.projectreactor</groupId>
+            <artifactId>reactor-net</artifactId>
+            <version>1.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectreactor.spring</groupId>
+            <artifactId>reactor-spring-context</artifactId>
+            <version>1.1.3.RELEASE</version>
+        </dependency>
+
+        <!-- GraphicsMagick -->
+        <dependency>
+            <groupId>com.sharneng</groupId>
+            <artifactId>gm4java</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         
 
         <!-- Logging with SLF4J & LogBack -->
@@ -219,12 +245,6 @@
             <version>0.16.0.RELEASE</version>
         </dependency>
 
-        <!-- Logging -->
-        <!--         <dependency> -->
-        <!--             <groupId>org.slf4j</groupId> -->
-        <!--             <artifactId>slf4j-api</artifactId> -->
-        <!--             <version>${slf4j.version}</version> -->
-        <!--         </dependency> -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
@@ -239,14 +259,6 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
-
-        <!-- Servlet -->
-        <!-- 		<dependency> -->
-        <!-- 			<groupId>javax.servlet</groupId> -->
-        <!-- 			<artifactId>servlet-api</artifactId> -->
-        <!-- 			<version>2.5</version> -->
-        <!-- 			<scope>provided</scope> -->
-        <!-- 		</dependency> -->
 
         <dependency>
             <groupId>javax.servlet</groupId>
